--- a/docs/default.css
+++ b/docs/default.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6, strong {
 	font-weight: 500;
 }
 
-p, li, span, label, input, textarea {
+p, li, span, label, input, textarea, a {
 	color: var(--secondaryText);
 	font-family: 'Roboto Mono', monospace;
 } 
@@ -328,7 +328,7 @@ h6 { font-size: 16px }
 	border: 1px solid var(--borderColor);
 	padding: 15px;
 	border-radius: 5px;
-	background-color: var(--mainColor);
+	background-color: var(--secondaryColor);
 	margin-bottom: 50px;
 }
 
